1.1alpha1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Reorganized internal structure of classes.
- Added ezcFeedSchema to define different feed types.
- Added ezcFeedElement instead of ezcFeedItem.
- Added support for XML attributes for feeds.
- Added regression tests based on the ones from Template.
- In RSS2 the title, link and description nodes of item nodes are not all
  required, but at least one of title or description nodes is required.
- Added support for RSS2 enclosure and tutorial on how to use it for creating
  and parsing podcasts.
- Completed support for creating and parsing RSS2 feeds.
- Completed support for creating and parsing RSS1 feeds.
- Completed support for creating and parsing ATOM feeds.
- Added the getContentType() method in ezcFeed to return its Content-Type.
- Added support for ATOM xml:lang attribute.
- The RSS1 about attribute is accessed as id through ezcFeed.
- Added support for the Content module.
- Added support for the DublinCore module.
- Fixed issue #12557: added parse support for version 0.91 and 0.92 RSS feeds,
  which are considered as RSS2 feeds.
- Added support for the iTunes module.
- Added support for the CreativeCommons module.
- Added the required xmlns attribute when creating RSS1 feeds.
- Added parse support for version 0.93 and 0.94 RSS feeds.
- The RSS2 guid item attribute is accessed as id through ezcFeed.
- Added a feed creator example application.


1.0beta1 - Monday 18 December 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added the ezcFeed::parseContent() method that parses a feed contained in a
  variable.


1.0alpha1 - Tuesday 24 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Initial release of this package.