@@ -1,0 +1,13 @@
+<?php
+return array( 'id' => 'Feed id',
+              'title' => array( array( '#' => 'Feed title',
+                                       'type' => '' ) ),
+              'updated' => 'Feed updated',
+              'author' => array( array( 'name' => 'Author name' ) ),
+              'item' => array( array( 'id' => 'Entry id',
+                                      'title' => 'Entry title',
+                                      'content' => 'Entry content',
+                                      'updated' => 'Entry updated',
+                                      'DublinCore' => array( array( 'date'        => array( array( '#' => new DateTime( '@1202996091' ),
+                                                                                                   'language' => 'g' ) ), ) ), ) ) );
+?>
