@@ -1,0 +1,6 @@
+<?php
+return array( 'id' => 'Feed id',
+              'title' => 'Feed title',
+              'updated' => new DateTime( '@1071335871' ),
+              'author' => array( array( 'name' => 'Author name' ) ) );
+?>
