@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
+<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://purl.org/rss/1.0/" xmlns:dc="http://purl.org/dc/elements/1.1/">
+  <channel rdf:about="Channel about">
+    <title>Feed title</title>
+    <link>Feed link</link>
+    <description>Feed description</description>
+    <items>
+      <rdf:Seq>
+        <rdf:li resource="Item about"/>
+      </rdf:Seq>
+    </items>
+  </channel>
+  <item rdf:about="Item about">
+    <title>Item title</title>
+    <link>Item link</link>
+    <dc:date xml:lang="g">2008-02-14T13:34:51+00:00</dc:date>
+  </item>
+</rdf:RDF>
