@@ -1,0 +1,7 @@
+<?php
+return array( 'title' => 'Feed title',
+              'link'  => array( 'Feed link' ),
+              'description' => 'Feed description',
+              'updated' => new DateTime( '@' . time() ),
+            );
+?>
